# farmstack-backend

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  categories copy.json  categories.json  conftest.py  data.xls  db.sqlite3  docker-compose.yaml  new_data.xls  pyproject.toml  pytest.ini  requirements.txt  temp.py  test-db-postgres.yml  test.py  test_config.py  test_db.yaml  xls_file.xls  youtube_cookies.txt
accounts/: .views.py.swp  email.py  models.py  serializers.py  urls.py  utils.py  views.py
ai/: open_ai_utils.py  utils.py  views.py
api_builder/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
connectors/: models.py  serializers.py  utils.py  views.py
core/: asgi.py  base_models.py  constants.py  serializer_validation.py  settings.json  settings.py  urls.py  utils.py  views.py
datahub/: .views.py.swp  apps.py  base_models.py  database.py  models.py  serializers.py  url.py  urls.py  views.py
datasets/: models.py  serializers.py  urls.py  views.py
db_scripts/: initial_data.yaml  userrole_fixture.yaml
docs/: INSTALLATION_GUIDE.md  SYSTEM_REQUIREMENTS.md
microsite/: apps.py  models.py  saagu_baagu.py  serializers.py  urls.py  views.py
participant/: constants.py  models.py  serializers.py  urls.py  views.py
tests/: conftest.py  test_team_member.py
utils/: admin_utils.py  agnext_data.json  authentication_services.py  authorization_services.py  chain_builder.py  connector_utils.py  decorators.py  embeddings_creation.py  file_operations.py  jwt_services.py  kde_data.json  krishitantra_data.json  login_helper.py  pgvector.py  (+3 more)
(+178 files in other folders)
